@@ -2596,9 +2596,10 @@ function template_preprocess_html(&$variables) {
   }
 
   // Construct page title.
-  if (drupal_get_title()) {
+  $title = drupal_get_title();
+  if (strlen(trim($title))) {
     $head_title = array(
-      'title' => strip_tags(drupal_get_title()),
+      'title' => strip_tags($title),
       'name' => check_plain(variable_get('site_name', 'Drupal')),
     );
   }
@@ -2697,7 +2698,8 @@ function template_process_page(&$variables) {
     $variables['breadcrumb'] = theme('breadcrumb', array('breadcrumb' => drupal_get_breadcrumb()));
   }
   if (!isset($variables['title'])) {
-    $variables['title'] = drupal_get_title();
+    $title = drupal_get_title();
+    $variables['title'] = strlen(trim($title)) ? $title : NULL;
   }
 
   // Generate messages last in order to capture as many as possible for the
